# ScopeExit

./: .travis.yml  CMakeLists.txt  README.md
include/ScopeExit/: ScopeExit.h  ScopeFailure.h  ScopeSuccess.h
samples/: CMakeLists.txt
samples/Demo/: CMakeLists.txt  Main.cpp
samples/Html/: CMakeLists.txt  Main.cpp
